# larp-manager

./: .gitignore  .pre-commit-config.yaml  .pylintrc  environment.yml  pylint_hook.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
app/: __init__.py  exceptions.py  main.py
app/api/: http_handler.py  players_handler.py
app/db/: db_connection_handler.py
app/db/daos/: base_dao.py  games_dao.py  player_dao.py
app/db/db_models/: base.py  game_db_model.py  organizer_db_model.py  person_db_model.py  player_db_model.py
app/db/models/: base.py  game.py  game_db_model.py  player.py  player_db_model.py
app/domain/: game.py  player.py
app/dto/: common.py  player_dto.py
app/models/: filter.py
app/models/domain/: game.py  player.py
app/models/dto/: games_dto.py  player_dto.py  player_requests_dtos.py
app/services/: games_service.py  players_service.py
tests/e2e/: conftest.py  test_players_e2e.py
